Fixed Alpha Checkpt Issue
Projectile will now diminish when hit the wall

--- a/cs415_final_project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/cs415_final_project/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -157,12 +157,12 @@ LastLevel=/Game/Levels/Prototypes
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.SceneColorTint\" \"Object.PostProcess.PostProcessSettings.Bloom1Tint\" \"Object.PostProcess.PostProcessSettings.Bloom2Tint\" \"Object.PostProcess.PostProcessSettings.Bloom3Tint\" \"Object.PostProcess.PostProcessSettings.Bloom4Tint\" \"Object.PostProcess.PostProcessSettings.Bloom5Tint\" \"Object.PostProcess.PostProcessSettings.Bloom6Tint\" \"Object.PostProcess.PostProcessSettings.BloomDirtMaskTint\" \"Object.PostProcess.PostProcessSettings.IndirectLightingColor\" \"Object.PostProcess.PostProcessSettings.AmbientCubemapTint\" \"Object.PostProcess.PostProcessSettings.LensFlareTint\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[7]\" "
+Object="\"Object\" "
 Texture2D="\"Object\" "
 Texture="\"Object\" "
 StreamableRenderAsset="\"Object\" "
-SceneComponent="\"Object\" \"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.SceneColorTint\" \"Object.PostProcess.PostProcessSettings.Bloom1Tint\" \"Object.PostProcess.PostProcessSettings.Bloom2Tint\" \"Object.PostProcess.PostProcessSettings.Bloom3Tint\" \"Object.PostProcess.PostProcessSettings.Bloom4Tint\" \"Object.PostProcess.PostProcessSettings.Bloom5Tint\" \"Object.PostProcess.PostProcessSettings.Bloom6Tint\" \"Object.PostProcess.PostProcessSettings.BloomDirtMaskTint\" \"Object.PostProcess.PostProcessSettings.IndirectLightingColor\" \"Object.PostProcess.PostProcessSettings.AmbientCubemapTint\" \"Object.PostProcess.PostProcessSettings.LensFlareTint\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[7]\" "
-ActorComponent="\"Object\" \"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.SceneColorTint\" \"Object.PostProcess.PostProcessSettings.Bloom1Tint\" \"Object.PostProcess.PostProcessSettings.Bloom2Tint\" \"Object.PostProcess.PostProcessSettings.Bloom3Tint\" \"Object.PostProcess.PostProcessSettings.Bloom4Tint\" \"Object.PostProcess.PostProcessSettings.Bloom5Tint\" \"Object.PostProcess.PostProcessSettings.Bloom6Tint\" \"Object.PostProcess.PostProcessSettings.BloomDirtMaskTint\" \"Object.PostProcess.PostProcessSettings.IndirectLightingColor\" \"Object.PostProcess.PostProcessSettings.AmbientCubemapTint\" \"Object.PostProcess.PostProcessSettings.LensFlareTint\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[7]\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
 PaperFlipbook="\"Object\" "
 InputMappingContext="\"Object\" "
 DataAsset="\"Object\" "
@@ -326,14 +326,14 @@ PaperTileMapActor="\"Object.Actor.Tags\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/PlayerCharacter/Player_BP.Player_BP
+OpenAssetsAtExit=/Game/Skeleton/blueprints/Skeleton_BP.Skeleton_BP
 
 [PluginBrowser]
 InstalledPlugins=PaperZD
 
 [RootWindow]
-ScreenPosition=X=1280.000 Y=720.000
-WindowSize=X=1290.000 Y=730.000
+ScreenPosition=X=930.667 Y=0.000
+WindowSize=X=1294.000 Y=734.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -362,7 +362,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/FreeCuteTileset
+ContentBrowserTab1.SelectedPaths=/Game/Skeleton/blueprints
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -499,17 +499,17 @@ TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Enhan
 TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Build.Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_HoloLens,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Build.Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_HoloLens,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,IOSRuntimeSettings.Build.Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_HoloLens,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,
-CameraComponent=CameraComponent.PostProcess.Lens,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CameraComponent.PostProcess.Lens|Exposure,
+CameraComponent=CameraComponent.PostProcess.Lens,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CameraComponent.PostProcess.Lens
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,
 WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,
-K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
-Player_BP_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CameraComponent.PostProcess.Lens,
+Player_BP_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CameraComponent.PostProcess.Lens,
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 CharacterMovementComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 warriorZDBP_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
-PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CameraComponent.PostProcess.Lens,
 PaperZDAnimationComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
-PaperFlipbookComponent=CameraComponent.PostProcess.Lens,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+PaperFlipbookComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CameraComponent.PostProcess.Lens,
 CapsuleComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 Character=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 SceneComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
@@ -522,32 +522,34 @@ Actor=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 HealthPickup_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 Checkpoint_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 CoinPickup_BP_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+Skeleton_BP_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CameraComponent.PostProcess.Lens,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PlayerCharacter/Animations/warriorZDBP
-MRUItem1=/Game/FreeCuteTileset/Decors_TileSet
-MRUItem2=/Game/FreeCuteTileset/Tileset_TileSet
-MRUItem3=/Game/FreeCuteTileset/Level1
-MRUItem4=/Game/Items/Checkpoint
-MRUItem5=/Game/FreeCuteTileset/Decors
-MRUItem6=/Game/PlayerCharacter/Player_BP
-MRUItem7=/Game/FreeCuteTileset/Tileset
-MRUItem8=/Game/Levels/Prototypes
-MRUItem9=/Game/NewMap
-MRUItem10=/Game/FreeCuteTileset/backgroundTileMap
-MRUItem11=/Game/FreeCuteTileset/BG1
-MRUItem12=/Game/PlayerCharacter/Animations/warrio_animation_source
-MRUItem13=/Game/PlayerCharacter/Animations/AnimSequences/Fall
-MRUItem14=/Game/NewMap_HLOD0_Instancing
-MRUItem15=/Game/warrior_animation/Input/Actions/IA_Move
-MRUItem16=/Game/warrior_animation/Input/Actions/IA_Jump
-MRUItem17=/Game/warrior_animation/Input/Actions/IA_Dash
-MRUItem18=/Game/warrior_animation/Input/IMC_Default
-MRUItem19=/Game/PlayerCharacter/Animations/AnimSequences/Jump
+MRUItem0=/Game/Skeleton/blueprints/Skeleton_BP
+MRUItem1=/Game/PlayerCharacter/Player_BP
+MRUItem2=/Game/Mushroom/Blueprints/Projectile_BP
+MRUItem3=/Game/PlayerCharacter/AppleProjectile_BP
+MRUItem4=/Game/Levels/Prototypes
+MRUItem5=/Game/PlayerCharacter/Animations/warriorZDBP
+MRUItem6=/Game/FreeCuteTileset/Decors_TileSet
+MRUItem7=/Game/FreeCuteTileset/Tileset_TileSet
+MRUItem8=/Game/FreeCuteTileset/Level1
+MRUItem9=/Game/Items/Checkpoint
+MRUItem10=/Game/FreeCuteTileset/Decors
+MRUItem11=/Game/FreeCuteTileset/Tileset
+MRUItem12=/Game/NewMap
+MRUItem13=/Game/FreeCuteTileset/backgroundTileMap
+MRUItem14=/Game/FreeCuteTileset/BG1
+MRUItem15=/Game/PlayerCharacter/Animations/warrio_animation_source
+MRUItem16=/Game/PlayerCharacter/Animations/AnimSequences/Fall
+MRUItem17=/Game/NewMap_HLOD0_Instancing
+MRUItem18=/Game/warrior_animation/Input/Actions/IA_Move
+MRUItem19=/Game/warrior_animation/Input/Actions/IA_Jump
 
 [DetailCategories]
 Texture2D.LevelOfDetail=True
 Texture2D.Compression=True
+Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Texture=True
@@ -1175,7 +1177,6 @@ StaticMeshComponent.Tags=True
 StaticMeshComponent.Cooking=True
 PaperTileSet.TileSet=True
 PaperTileSet.SingleTileEditor=True
-Texture2D.Interchange =True
 Platform_BP_C.TransformCommon=True
 Platform_BP_C.Rendering=True
 Platform_BP_C.Replication=True
@@ -1332,6 +1333,74 @@ SceneComponent.Sockets=True
 SceneComponent.ComponentTick=True
 SceneComponent.ComponentReplication=True
 SceneComponent.Events=True
+AppleProjectile_BP_C.Tick=True
+AppleProjectile_BP_C.Replication=True
+AppleProjectile_BP_C.Rendering=True
+AppleProjectile_BP_C.Collision=True
+AppleProjectile_BP_C.Actor=True
+AppleProjectile_BP_C.Input=True
+AppleProjectile_BP_C.HLOD=True
+AppleProjectile_BP_C.Physics=True
+AppleProjectile_BP_C.WorldPartition=True
+AppleProjectile_BP_C.Events=True
+Projectile_BP_C.Tick=True
+Projectile_BP_C.Replication=True
+Projectile_BP_C.Rendering=True
+Projectile_BP_C.Collision=True
+Projectile_BP_C.Actor=True
+Projectile_BP_C.Input=True
+Projectile_BP_C.HLOD=True
+Projectile_BP_C.Physics=True
+Projectile_BP_C.WorldPartition=True
+Projectile_BP_C.Events=True
+Skeleton_BP_C.TransformCommon=True
+Skeleton_BP_C.Sprite=True
+Skeleton_BP_C.Tick=True
+Skeleton_BP_C.Default=True
+Skeleton_BP_C.PaperZD=True
+Skeleton_BP_C.ComponentTick=True
+Skeleton_BP_C.Tags=True
+Skeleton_BP_C.AssetUserData=True
+Skeleton_BP_C.Replication=True
+Skeleton_BP_C.Physics=True
+Skeleton_BP_C.Collision=True
+Skeleton_BP_C.ComponentReplication=True
+Skeleton_BP_C.Lighting=True
+Skeleton_BP_C.Activation=True
+Skeleton_BP_C.Rendering=True
+Skeleton_BP_C.Variable=True
+Skeleton_BP_C.Cooking=True
+Skeleton_BP_C.HLOD=True
+Skeleton_BP_C.Mobile=True
+Skeleton_BP_C.Navigation=True
+Skeleton_BP_C.RayTracing=True
+Skeleton_BP_C.VirtualTexture=True
+Skeleton_BP_C.Character=True
+Skeleton_BP_C.Character Movement (General Settings)=True
+Skeleton_BP_C.Character Movement: Walking=True
+Skeleton_BP_C.Character Movement: Jumping / Falling=True
+Skeleton_BP_C.Character Movement (Networking)=True
+Skeleton_BP_C.Character Movement: Swimming=True
+Skeleton_BP_C.Character Movement: Flying=True
+Skeleton_BP_C.Character Movement: Custom Movement=True
+Skeleton_BP_C.Character Movement (Rotation Settings)=True
+Skeleton_BP_C.Character Movement: Physics Interaction=True
+Skeleton_BP_C.Character Movement=True
+Skeleton_BP_C.Character Movement: Avoidance=True
+Skeleton_BP_C.RootMotion=True
+Skeleton_BP_C.Character Movement: NavMesh Movement=True
+Skeleton_BP_C.NavMovement=True
+Skeleton_BP_C.Velocity=True
+Skeleton_BP_C.PlanarMovement=True
+Skeleton_BP_C.MovementComponent=True
+Skeleton_BP_C.Shape=True
+Skeleton_BP_C.Camera=True
+Skeleton_BP_C.Pawn=True
+Skeleton_BP_C.Actor=True
+Skeleton_BP_C.Input=True
+Skeleton_BP_C.WorldPartition=True
+Skeleton_BP_C.Events=True
+Skeleton_BP_C.Materials=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Input/IMC_Default.IMC_Default=1
@@ -1352,6 +1421,9 @@ SceneComponent.Events=True
 /Game/FreeCuteTileset/Tileset.Tileset=1
 /Game/FreeCuteTileset/Decors.Decors=1
 /Game/Items/Checkpoint.Checkpoint=1
+/Game/PlayerCharacter/AppleProjectile_BP.AppleProjectile_BP=0
+/Game/Mushroom/Blueprints/Projectile_BP.Projectile_BP=1
+/Game/Skeleton/blueprints/Skeleton_BP.Skeleton_BP=1
 
 [SelectionDetails]
 PreserveScaleRatio=True
